# fanuc_crx10ia_dual_arm

./: .gitignore  README.md  SUBMISSION_GUIDE.md
docs/: technical_report.md
src/fanuc_dual_arm_control/: CMakeLists.txt  package.xml
src/fanuc_dual_arm_control/scripts/: circle_demo.py  task1_simple_motion.py  task2_cartesian_control.py
src/fanuc_dual_arm_description/: CMakeLists.txt  package.xml
src/fanuc_dual_arm_description/config/: view_robot.rviz
src/fanuc_dual_arm_description/launch/: display.launch.py
src/fanuc_dual_arm_description/urdf/: dual_arm.urdf.xacro  robotiq_hande.urdf.xacro
